--- a/02Previos.tex
+++ b/02Previos.tex
@@ -178,7 +178,7 @@ Finalmente llegamos a que  la solución del problema de contorno, será:
 \section{La energía en la ecuación de onda}
 \label{sec:energiaondas}
 
-En esta sección nos centraremos en analizar la ley de energía en la ecuación de onda. Para poder obtener el la energía de la ecuación haremos para todo $t\in [0,T]$ el producto interior \ref{Inner} de la misma con $u_t$:
+En esta sección nos centraremos en analizar la ley de energía en la ecuación de onda. Para poder obtener el la energía de la ecuación haremos, para todo $t\in [0,T]$, el producto interior \ref{Inner} de la misma con $u_t$:
 
 \begin{equation*}
 	\left<u_t(\cdot,t),u_{tt}(\cdot,t)\right>_{L^2(\Omega)} = c^2\left<u_{t}(\cdot,t),u_{xx}(\cdot,t)\right>_{L^2(\Omega)}.
