--- a/FicherosTFG/04SegundaParte.tex
+++ b/FicherosTFG/04SegundaParte.tex
@@ -145,14 +145,14 @@ La forma de la onda en cada punto no es tan regular como en la sección \ref{subs
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Pico5.png}
-		\caption{Archivo figura5-10.wav}
+		\caption{Archivo figura5-13.wav}
 		\label{fig:Pico5}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Pico6.png}
-		\caption{Archivo figura5-11.wav}
+		\caption{Archivo figura5-14.wav}
 		\label{fig:Pico6}
 	\end{minipage}
 \end{figure}
@@ -244,7 +244,7 @@ Muestra de la solución con $m=200$, $h=\frac{1}{200}$ y $k= \frac{1}{88000}$.:
 \begin{wrapfigure}{r}{0.45\textwidth}
 	\vspace{-1cm}
 	\includegraphics[width=0.45\textwidth]{Planoonda.png}
-	\caption{Archivo figura5-20.wav}
+	\caption{Archivo figura5-19.wav}
 	\label{fig:PlanoOnda}
 	
 \end{wrapfigure}
@@ -373,14 +373,14 @@ En la imagen de la derecha podemos observar las inestabilidades en forma de onda
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Picoondamu1.png}
-		\caption{Movimiento de la onda para $\mu=1$. Archivo figura5-32.wav}
+		\caption{Movimiento de la onda para $\mu=1$. Archivo figura5-29.wav}
 		\label{fig:Picoonda}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Picoondamu0.1.png}
-		\caption{Movimiento de la onda para $\mu=0.1$. Archivo figura5-33.wav}
+		\caption{Movimiento de la onda para $\mu=0.1$. Archivo figura5-30.wav}
 		\label{fig:Picoondamu0.1}
 	\end{minipage}
 \end{figure}
@@ -413,13 +413,13 @@ En este caso, a mayor sea $m$ antes se propagarán las inestabilidades, por ello 
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Picoondamu1.png}
-		\caption{Movimiento de la onda para $\mu=1$.\ref{fig:Piconormal}}
+		\caption{Movimiento de la onda para $\mu=1$. Archivo figura5-27.wav}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{Picoondamu1.1.png}
-		\caption{Movimiento de la onda para $\mu=1.1$. Archivo fig5-38.wav}
+		\caption{Movimiento de la onda para $\mu=1.1$. Archivo figura5-34.wav}
 		\label{fig:Picoondamu1.1}
 	\end{minipage}
 \end{figure}
@@ -435,7 +435,7 @@ Si intentamos reproducir el sonido de esta última situación no se escuchará nada
 \section{Archivos .wav y síntesis de sonido}
 Continuando con la reflexión anterior, es importante mencionar como se ha conseguido la síntesis de sonido, y el guardado del mismo.\\
 
-En este trabajo se ha utilizado una síntesis de modelado físico, puesto que nos centramos en la recreación del movimiento de una cuerda. En general existen diversos tipos de síntesis de sonido, síntesis aditiva, síntesis de modulación de frecuencia, etc.\\
+En este trabajo se ha utilizado una síntesis de modelado físico, puesto que nos centramos en la recreación del movimiento de una cuerda. En general, existen diversos tipos de síntesis de sonido, síntesis aditiva, síntesis de modulación de frecuencia, etc.\\
 
 \subsection{Frecuencia}
 Comencemos la sección abordando la frecuencia de la onda, ya que esta repercutirá en el sonido final.\\ 
@@ -443,13 +443,14 @@ Comencemos la sección abordando la frecuencia de la onda, ya que esta repercutir
 En este caso, vamos a estudiar la velocidad de propagación $c$, al estar estrechamente relacionada con la frecuencia de la onda. En el libro \citep{ScienceSound}, el autor obtiene  $c=\lambda \text{f}$, donde $\lambda$ denota la longitud de onda y $\text{f}$ representa la frecuencia de la onda. Por tanto tendremos,
 $$\text{f}=\frac{c}{\lambda}.$$
 
-En este caso $c$ será un parámetro que definiremos dependiendo de la frecuencia a obtener, puesto que, normalmente, depende de la tensión de la cuerda y la densidad de la misma, tal y como vimos en la sección \ref{sec:fisica}. Por otro lado, $\lambda$  dependerá del largo de la cuerda, $L$, y del número de nodos que se presenten en la misma, $N$. Un nodo es un punto en el que la amplitud se mantiene 0 en el tiempo.
+$c$ será un parámetro que definiremos dependiendo de la frecuencia a obtener, puesto que normalmente, depende de la tensión de la cuerda y la densidad de la misma, tal y como vimos en la sección \ref{sec:fisica}. 
 
 
 
 \subsection{\textbf{$f(x)= sin(2\pi x)$}, $g(x)=0$}
-Si tomamos como ejemplo una cuerda, en la que la posición inicial sea $f(x)= sin(2\pi x)$, observamos como el número de nodos es 3.
+Si tomamos como ejemplo una cuerda en la que la posición inicial sea $f(x)= sin(2\pi x)$, en esta ocasión al estar en una onda estacionaria, tal y como se hace en el capítulo 15 de \citep{universitaria}, será extremadamente importante el número de nodos.  Un nodo es un punto en el que la amplitud se mantiene 0 en el tiempo, y dependiendo de el número de nodos nos encontraremos en un armónico distinto. $N=2$ corresponderá al primer armónico, $N=3$ al segundo, etc.
 \newpage
+\vspace{3cm}
 
 \begin{figure}[ht]
 	\centering
@@ -467,35 +468,54 @@ Si tomamos como ejemplo una cuerda, en la que la posición inicial sea $f(x)= sin
 		\label{fig:2Seno2}
 	\end{minipage}
 \end{figure}
+\vspace{1cm}
+Al encontrarnos en una onda estacionaria, $\lambda$  dependerá del largo de la cuerda, $L$, y del número de nodos que se presenten en la misma, $N$, de la siguiente forma $\lambda=\fra{2l}{N-1}$.\\
 
-Luego, si queremos obtener $\textbf{f}=440Hz$, frecuencia del La central, será $\lambda= \frac{2L}{N}=\frac{2}{3}$,  $c=\lambda \textbf{f}=\frac{2}{3}*440 \approx 263$. Con estos parámetros obtenemos
+\begin{wrapfigure}[6]{r}{0.45\textwidth}
+	\vspace{-1.5cm}
+	\includegraphics[width=0.45\textwidth]{2Seno4.png}
+	\caption{$sin(2\pi x)$ en $x=0.25$ Archivo figura5-37.wav}
+	\label{fig:2Seno4}
+	
+\end{wrapfigure}
+\vspace{2cm}
+Luego, si queremos obtener $\textbf{f}=440Hz$, frecuencia del La central, será $\lambda=\frac{2}{2}=1$,  $c=\lambda \textbf{f}=1*440 = 440$. Con estos parámetros, para el punto de máxima amplitud $x=0.25$\\
 
+\vspace{2cm}
 
+Si utilizásemos de igual forma $c=440$ para la posición inicial $f(x)= sin(\pi x)$,
 
-En cada uno de los casos anteriores, tal y como hemos dicho al principio de la sección, $c=440$ y como solo hay dos nodos, puntos en los que la amplitud es siempre $0$, en todos los casos la frecuencia será $440Hz$. Esta frecuencia corresponde a un La central (4ª octava), la hemos elegido al ser la más usual para ejemplificar este tipo de modelado.\\
-Ahora, elijamos un caso en el que tengamos $3$ nodos, por ejemplo $f(x)= sen(2\pi x)$, La frecuencia se corresponderá a un La de 5ª octava.
+\newpage
 
-
-Podemos observar esto  eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, \ref{subsec:sin(x)},  y seno de $2\pi x$. Vemos claramente que llega a su máxima amplitud el doble de veces.
-
-\begin{figure}[ht]
+\begin{figure}[!ht]
 	\centering
-	\begin{minipage}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{2Seno3.png}
-		\caption{$sin(x)$ en $x=0.5$ Archivo figura5-5.wav}
-		\label{fig:2Seno3}
-	\end{minipage}
-	\hfill
-	\begin{minipage}[b]{0.45\textwidth}
-		\centering
-		\includegraphics[width=\textwidth]{2Seno4.png}
-		\caption{$sin(2x)$ en $x=0.25$ Archivo figura5-24.wav}
-		\label{fig:2Seno4}
-	\end{minipage}
+	\includegraphics[width=0.55\textwidth]{SenoPuntos.png}
+	\caption{Número de nodos}
+	\label{fig:SenoPuntos}
+\end{figure}
+
+Ahora tendremos, $N=2$ y  $\lambda=\frac{2*L}{N-1}=2$, se sigue $\text{f}= \fra{440}{2}=220Hz$, por lo que el número de oscilaciones por segundo se reducirán a la mitad, siendo un La de 3ª octava. Lo ilustramos con la siguiente imagen.\\
+
+Podemos observar esto  eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, \ref{subsec:sin(x)},  y seno de $2\pi x$. Vemos claramente que llega a su máxima amplitud el la mitad de veces.
+
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=0.55\textwidth]{2Seno3.png}
+	\caption{$sin(\pi x)$ en $x=0.5$ Archivo figura5-5.wav}
+	\label{fig:2Seno3}
 \end{figure}
 
 
+\subsection{Guardado de las ondas de sonido}
+
+ Para conseguir guardar la aproximación de la onda obtenida en un archivo de tipo .wav, necesitaremos un único vector de datos. Este vector tendrá que contener datos entre $-1$ y $1$. Para conseguirlo hemos probado diferentes técnicas:
+ \begin{itemize}
+ 	\item Suma de las ondas producida en cada punto espacial, es decir, $\sum_{m}^{j=0}u_{j,r}$. Esto resultará en un vector de aproximaciones, que deberemos escalar para que se encuentren entre $-1$ y $1$. 
+ 	\item Uso de canales, guardamos el vector aproximación de cada punto de la cuerda, fijado  $j=0,\dots,m$ en un canal de audio distinto. Esto se hace usualmente para conseguir un sonido envolvente, cuando se tienen varios altavoces. La desventaja de este método es que la mayoría de reproductores tiene un número máximo de canales.
+ 	\item Elección de un punto de la cuerda, usualmente el de máxima amplitud. Si la onda es suficientemente regular, el sonido en cada punto es extremadamente parecido, y solo se irá disipando conforme nos acerquemos a los nodos. Por ello, no necesitamos más de un archivo de audio. La desventaja es que si la onda no es suficientemente regular tendremos que guardarlo en diferentes archivos, y por lo tanto realizar el proceso de guardado varias veces.
+ \end{itemize} 
+
+A lo largo del trabajo hemos utilizado este último método, ya que nos permite comparar las ondas en distintos puntos de la cuerda.
 
 
 
